k8s_workload/ingress/ingress_lb.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: qcloud
    kubernetes.io/ingress.existLbId: "lb-id"
    ingress.cloud.tencent.com/tke-service-config: ${ingress-lb-config-name}
    kubernetes.io/ingress.rule-mix: "true"
  name: ${ingress-lb-name}
  namespace: default
spec:
  rules:
  - host: ${cdn-domain}
    http:
      paths:
      - backend:
          serviceName: ${service-lb-name}
          servicePort: 80
        path: "/*"
        pathType: ImplementationSpecific
  tls:
  - secretName: ${ssl-cert-name}
